# scratchpad

./: .gitignore  README.md
rust/macrokata/: 03_literal_variables.rs  04_expression_variables.rs  05_more_complex_example.rs  06_repetition.rs  07_more_repetition.rs  08_nested_repetition.rs  10_macros_calling_macros.rs  11_macro_recursion.rs
rust/proc-macro-workshop/: Cargo.toml  main.rs
rust/proc-macro-workshop/builder/: Cargo.toml
rust/proc-macro-workshop/builder/src/: lib.rs
rust/proc-macro-workshop/debug/: Cargo.toml
rust/proc-macro-workshop/debug/src/: lib.rs
rust/proc-macro-workshop/seq/: Cargo.toml
rust/proc-macro-workshop/seq/src/: lib.rs
rust/proc-macro-workshop/sorted/: Cargo.toml
rust/proc-macro-workshop/sorted/src/: lib.rs
