[package]
name = "proc-macro-workshop"
edition = "2024"
publish = false

[workspace]
resolver = "3"

[[bin]]
name = "workshop"
path = "main.rs"

[dependencies]
derive_builder = { path = "builder" }
seq = { path = "seq" }

# bitfield = { path = "bitfield" }
# derive_debug = { path = "debug" }
# sorted = { path = "sorted" }
